fix spacing on inline lists

--- a/src/scss/facades/layout/_lists.scss
+++ b/src/scss/facades/layout/_lists.scss
@@ -3,8 +3,17 @@
 	white-space:nowrap;
 	list-style:none;
 	display:block;	
+	letter-spacing: -4px;
+	word-spacing:-4px;
+	
 	li{
-		@include inline-block;		
+		@include inline-block;
+		letter-spacing:normal;
+		word-spacing:normal;		
+		
+		*{ letter-spacing:normal; 
+			 word-spacing:normal;
+			}
 	}
 	
 	li a{ 
